[package]
name = "sol-savings"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "radar_lend"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = {version = "0.30.1", features = ["token", "metadata"] }
solana-program = "2.0.13"
chainlink_solana = "1.0.0"
mpl-token-metadata = "4.1.2"